--- a/kontakt.html
+++ b/kontakt.html
@@ -90,7 +90,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p class="contactp">
-            <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75 / fax: +48 22 629 97 05 <br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+            <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
             <br><br>
             <strong>Dane rejestrowe:</strong><br> Sąd rejonowy dla m.st. Warszawy w Warszawie<br> XIV Wydział Gospodarczy Krajowego Rejestru<br> Sądowego KRS0000060995<br> NIP: 526-020-34-93, Regon: 012523131<br> Kapitał zakładowy: 392 000,00 PLN<br>
         </p>
@@ -110,7 +110,7 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75 / fax: +48 22 629 97 05 <br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: +48 22 628 47 75<br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
         </div>
