delete img on header sections and change h1overimg text

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe naszym</span><br><span> klientom od przeszło 70 lat.</span></h1>
-        <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
+        <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku.</span></h1>
     </header>
 
     <!-- Button Section -->
