--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             </ul>
         </nav>
         <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku.</span></h1>
+        <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
     </header>
 
     <!-- Button Section -->
